--- a/style.css
+++ b/style.css
@@ -1,14 +1,14 @@
 * {
   margin: 0;
   padding: 0;
-  font-family: sans-serif;
+  font-family: "DM Sans", "san-serif";
   box-sizing: border-box;
 }
 
 .container {
   width: 100%;
   height: 100vh;
-  background-color: salmon;
+  background-color: rgb(172, 206, 212);
   display: flex;
   justify-content: center;
   align-items: center;
@@ -17,10 +17,10 @@
 
 .calendar {
   background-color: black;
-  color: lightgray;
-  width: 450px;
+  color: white;
+  width: 800px;
   height: 520px;
-  border-radius: 10px;
+  border-radius: 20px;
   box-shadow: 4px 4px 8px rgba(0, 0, 0, 0.4);
 }
 
@@ -38,7 +38,7 @@
 
 .month h1 {
   font-size: 30px;
-  font-weight: 400;
+  font-weight: bold;
   text-transform: uppercase;
 }
 
@@ -64,9 +64,11 @@
 
 .days {
   width: 100%;
-  display: flex;
-  flex-wrap: wrap;
-  padding: 2px;
+  display: grid;
+  grid-template-columns: repeat(7, 1fr);
+  grid-template-rows: repeat(6, 1fr);
+  justify-items: center;
+  font-weight: 500;
 }
 
 .days div {
@@ -80,17 +82,21 @@
 }
 
 .days div:hover:not(.empty) {
-  border: 2px solid gray;
+  border: 2px solid white;
   cursor: pointer;
+  border-radius: 8px;
 }
 
 .today {
   background-color: lightseagreen;
+  border-radius: 8px;
 }
 
 .selected {
   background-color: #ade6d7;
   color: black;
+  border-radius: 8px;
+  font-weight: 500;
 }
 
 button {
